feat: add info and button to page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <h1>ROCK PAPER SCISSORS</h1>
+    <p>Press button <button id="start-game">START GAME</button> for to start the game!</p>
+
     <script src="main.js"></script>
   </body>
 </html>
