--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>ROCK PAPER SCISSORS</h1>
     <p>Press button <button id="start-game">START GAME</button> for to start the game!</p>
 
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
