--- a/old/index.html
+++ b/old/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="../style/old.css">
     <title>Rock Paper Scissors</title>
   </head>
 
   <body>
+    <h1>ROCK PAPER SCISSORS</h1>
+    <p>Press button <button id="start-game">START GAME</button> for to start the game!</p>
+
+    <a href="..">Go to main version</a>
+
     <script src="script.js" type="module"></script>
   </body>
 </html>
