feat: add html and styles for rps-ui main page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="wrapper">
+        <div class="header__title">
+          <h1>ROCK PAPER SCISSORS</h1>
+          <p>by <a href="https://github.com/vyachnd/" target="_blank">@vyachnd</a></p>
+        </div>
+
+        <a class="header__link" href="./old/">Old version</a>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="wrapper"></div>
+    </main>
+
     <script src="script.js" type="module"></script>
   </body>
 </html>
